suffering finally over. Word wrap issue fixed and able to focus typing area via keypress on window when blurred

--- a/src/app/components/word-typing-space/word-typing-space.component.css
+++ b/src/app/components/word-typing-space/word-typing-space.component.css
@@ -1,3 +1,7 @@
 :focus{
     outline: none;
 }
+
+.word{
+    display: inline-block; 
+  }
